src/snapshots/abstract_bohm_tree__gam__tests__impl-4.snap
---
source: src/gam.rs
expression: psi
---
GAMTree {
    tree: {
        OMove {
            alphabet: Free(
                "u",
            ),
            step: 2,
        }: None,
    },
}
