src/snapshots/abstract_bohm_tree__gam__tests__impl-5.snap
---
source: src/gam.rs
expression: phi
---
GAMTree {
    tree: {
        OMove {
            alphabet: Init,
            step: 1,
        }: Some(
            (
                PMove {
                    alphabet: Free(
                        "u",
                    ),
                    pointer: None,
                },
                GAMTree {
                    tree: {},
                },
            ),
        ),
    },
}
