src/snapshots/abstract_bohm_tree__gam__tests__impl-7.snap
---
source: src/gam.rs
expression: phi
---
GAMTree {
    tree: {
        OMove {
            alphabet: Init,
            step: 1,
        }: Some(
            (
                PMove {
                    alphabet: Free(
                        "u",
                    ),
                    pointer: None,
                },
                GAMTree {
                    tree: {
                        OMove {
                            alphabet: Bound(
                                0,
                            ),
                            step: 3,
                        }: None,
                    },
                },
            ),
        ),
    },
}
