src/snapshots/abstract_bohm_tree__gam__tests__impl-8.snap
---
source: src/gam.rs
expression: psi
---
GAMTree {
    tree: {
        OMove {
            alphabet: Free(
                "u",
            ),
            step: 2,
        }: Some(
            (
                PMove {
                    alphabet: Bound(
                        0,
                    ),
                    pointer: Some(
                        0,
                    ),
                },
                GAMTree {
                    tree: {},
                },
            ),
        ),
    },
}
